# ndvm

./: .gitattributes  .gitignore  LICENSE  README.md  REPRODUCE.md  pyproject.toml  requirements.txt
bootstrap/: compiler.scm
docs/: NDVM_native_differentiable_vm.md
ndvm/: .gitignore  CMakeLists.txt  PHASE1.md  PHASE2.md  PHASE3.md  PHASE3B.md  PHASE3B_DESIGN.md  PHASE4.md  PHASE5.md  PHASE5_DESIGN.md  PHASE6.md  PHASE6_DESIGN.md  README.md  smoke_test.sh
ndvm/gpu/: kalman_poc.cu
ndvm/include/ndvm/: heap.hpp  payload.hpp  tape.hpp  value.hpp
ndvm/profiling/: BASELINE.md  THESIS_GATE_FINDINGS.md  alloc_counters.py  boxed_baseline.sbatch  bytecode_vm_e2e.py  compiled_kalman.sbatch  cosearch_budget.py  cosearch_cached_staging.py  cosearch_e2e.py  cosearch_gradcheck.py  cosearch_propose.py  cosearch_propose.sbatch  cosearch_rec.sbatch  cosearch_rec_e2e.py  cosearch_rec_propose.py  cosearch_run.sbatch  dump_programs.py  env_manifest.sh  jax_baseline.py  multicore.sbatch  perlane_sweep.py  profile_dmci_baseline.py  residual_e2e.py  slurm_baseline.sh  staged_baseline.py  thesis_gate.py  tuned_eager_e2e.py  variance.py
ndvm/profiling/results/: alloc_counters_n128.txt  baseline_n128.json  baseline_n128.txt  baseline_n128_r2.json  baseline_n128_r3.json  boxed_baseline_n128.txt  bytecode_vm_e2e_n128.txt  cached_staging_n128.json  compiled_kalman_n128.txt  cosearch_budget_n128.txt  cosearch_candidates_valid.jsonl  cosearch_e2e_n128.json  cosearch_rec_candidates_valid.jsonl  cosearch_rec_e2e_n128.json  jax_baseline_n128.json  jax_baseline_n128.stdout.txt  multicore_scaling_n128.txt  perlane_n128.json  staged_baseline_n128.json  staged_baseline_n128.stdout.txt  variance_n128.txt
ndvm/python/: ndvm_autograd.py  ndvm_ext.cpp  setup.py
ndvm/src/: interp.cpp  interp.hpp  interp_linalg.cpp  interp_tape.cpp  ndvm.cpp  parallel.cpp  parallel.hpp  sexpr.cpp  sexpr.hpp
ndvm/tests/: compare_equivalence.py  genprog.py  oracle_refs.py  run_fuzz.py  test_autograd_batched.py  test_autograd_boundary.py  test_batched.py  test_divergent.py  test_equivalence.py  test_inline_cache.py  test_parallel_boundary.py  test_parallel_determinism.py  test_parallel_stress.py  test_reuse.py  validate_batched_oracle.py
ndvm/tests/results/: fuzz_corpus.jsonl  fuzz_report.json  oracle_refs.json  run_fuzz_200_1234.stdout.txt  run_fuzz_500_7.stdout.txt  tsan_stress_n128.txt
ndvm/tests/results/seed7_n500/: fuzz_corpus.jsonl  fuzz_report.json
ndvm/tools/: boxed_run.cpp  compiled_kalman.cpp  ndvm_par.cpp  ndvm_run.cpp
neural_compiler/: __init__.py  cli.py  compiler.py  dmci.py  emit.py  serialize.py  stdlib.py
neural_compiler/anf/: __init__.py  anf_nodes.py  tco.py  transform.py
neural_compiler/backend/: README.md  __init__.py  base.py  cupy_backend.py  jax_backend.py  numpy_backend.py  torch_backend.py
neural_compiler/graph/: builder.py  (+1 more)
(+20 files in other folders)
